# ci-masterclass

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
src/: main.cpp
test/: CMakeLists.txt
